# orgee

./: .envrc  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
org/: main.org  tangle.org  template.org  testo.org
src/orgee/: __init__.py  link.py  markup.py  orgnode.py  orgnode2.py  parse_org2.py  properties.py  tag.py  util.py
tests/: test_foo.py
