[project]
name = "orgee"
version = "0.0.5"
dependencies = [
  
]
requires-python = ">=3.12"
authors = [{name = "Alfred Leung", email = "chunglak@gmail.com"}]
description = "A tool to manipulate org-mode documents"
readme = "README.md"

[dependency-groups]
dev = [
  "python-lsp-server[all]~=1.12",
  "black~=24.10", # Formatter
  "mypy~=1.14", # typing linter
  "pylint~=3.3", # linter
  "pytest~=8.3", # testing framework
  "ipykernel~=6.29", # for jupyter
]

[tool.black]
line-length = 80
